## Copyright (C) 2006 Free Software Foundation, Inc.
## This Makefile.am is free software; the Free Software Foundation
## gives unlimited permission to copy, distribute and modify it.


# What: list out the directories contains source code
SUBDIRS = lib common demotool client bbdisplay bbproxy hobbitd examples docs
# What: include the file in m4 directory
ACLOCAL_AMFLAGS = -I m4
