## Copyright (C) 2006 Free Software Foundation, Inc.
## This Makefile.am is free software; the Free Software Foundation
## gives unlimited permission to copy, distribute and modify it.
#

AM_CPPFLAGS = -I$(srcdir)/../lib -I$(srcdir)/../include
bin_PROGRAMS = bbtest-net hobbitping beastat


bbtest-net_SOURCES = bbtest-net.c 
bbtest-net_LDADD = ../lib/libxymon.la

hobbitping_SOURCES = hobbitping.c 
hobbitping_LDADD = ../lib/libxymon.la

beastat_SOURCES = beastat.c 
beastat_LDADD = ../lib/libxymon.la


