## Copyright (C) 2006 Free Software Foundation, Inc.
## This Makefile.am is free software; the Free Software Foundation
## gives unlimited permission to copy, distribute and modify it.
#

AM_CPPFLAGS = -I$(srcdir)/../lib -I$(srcdir)/../include
bin_PROGRAMS = hobbitlaunch bbhostgrep bbhostshow bbdigest bb bbcmd 


hobbitlaunch_SOURCES = hobbitlaunch.c 
hobbitlaunch_LDADD = ../lib/libxymonclient.la

bbhostgrep_SOURCES = bbhostgrep.c 
bbhostgrep_LDADD = ../lib/libxymonclient.la

bbhostshow_SOURCES = bbhostshow.c 
bbhostshow_LDADD = ../lib/libxymonclient.la

bbdigest_SOURCES = bbdigest.c 
bbdigest_LDADD = ../lib/libxymonclient.la

bb_SOURCES = bb.c
bb_LDADD = ../lib/libxymonclient.la

bbcmd_SOURCES = bbcmd.c
bbcmd_LDADD = ../lib/libxymonclient.la


