docsdir = $(datadir)/docs/@PACKAGE@
docs_DATA = about.html		     critview-disk.jpg	     editor-showclone.jpg   hobbitprocs.png \
bb-to-hobbit.html	     critview-green.jpg      hobbit-alerts.html     hobbit-tips.html.DIST   \
clonewarn.jpg		     editor-clonemaster.jpg  hobbit-apacheconf.txt  howtograph.html	    \
configure.txt		     editor-diskchanged.jpg  hobbit-bbhosts.png     install.html	   man-index.html \
criticalsystems.html	     editor-disksetup.jpg    hobbit-clients.png     known-issues.html	  \
critview-detail-acked.jpg    editor-main.jpg	     hobbit-config.html     mainview-acked.jpg	   stdview-detail-acked.jpg \
critview-detail-ackform.jpg  editor-makeclone.jpg    hobbitmain.png	    mainview.jpg	   TODO \
critview-detail.jpg	     editor-nohost.jpg	     hobbit-mrtg.html	    
