bin_PROGRAMS = bbproxy bbmessage.cgi
bbproxy_SOURCES = bbproxy.c


#bbproxy: $(PROXYOBJS) $(LIBOBJS)
#	$(CC) $(CFLAGS) -o $@ $(PROXYOBJS) $(LIBOBJS) $(HOBBITZLIB) $(NETLIBS)


# bbmessage.cgi: $(BBCGIOBJS) $(LIBOBJS)
# 	$(CC) $(CFLAGS) -o $@ $(BBCGIOBJS) $(LIBOBJS) $(HOBBITZLIB) $(SSLLIBS) $(NETLIBS)

bbmessage_cgi_SOURCES = bbmessage.c