## Copyright (C) 2006 Free Software Foundation, Inc.
## This Makefile.am is free software; the Free Software Foundation
## gives unlimited permission to copy, distribute and modify it.
#

#what: bin_PROGRAMS is a list of binary program. This word is a reserved keyword.
bin_PROGRAMS = hello

#what: ?_SOURCES  is a list of C source and header files  to generate a binary(hello) 
hello_SOURCES = main.c
